# parallel_version2

./: README.md
source/: CMakeLists.txt  parallel_version2.cpp
